[package]
name = "sentry-breakdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
futures-channel = "0.3"
futures-util = "0.3"
gloo-events = "0.1"
gloo-file = { version = "0.2", features = ["futures"] }
plotters = { version = "0.3", default-features = false, features = ["chrono", "line_series"] }
plotters-canvas = "0.3"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Text", "MouseEvent", "CssStyleDeclaration"] }
